fix bugs on mobile show ticket section

--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -181,7 +181,12 @@
   }
 
   &__button-placeholder {
-    width: 9.6875rem;
+    display: none;
+
+    @include tablet {
+      display: inline-block;
+      width: 9.6875rem;
+    }
   }
 
   &__mobile-label {
